idea/testData/multiplatform/duplicateExpectsExplicit/bottom/bottom.kt
// !RENDER_DIAGNOSTICS_MESSAGES

actual class <!AMBIGUOUS_EXPECTS("Actual class 'A'; left, right"), LINE_MARKER("descr='Has declaration in common module'")!>A<!>